--- a/Lesson 32 - الدرس/time.css
+++ b/Lesson 32 - الدرس/time.css
@@ -1,6 +1,8 @@
 #outside_box{
-width: 400px;
-height: 300px;
+max-width: 400px;
+max-height: 300px;
+height: 100%;
+width:100%;
 position: absolute;
 top: 50%;
 left: 50%;
@@ -21,7 +23,7 @@ background-color: aqua;
     width: 100%;
     height: 200px;
     color: aliceblue;
-    font-size: 55px;
+    font-size: 50px;
     font-family: 'Saira Stencil One', cursive;
     background-color: black;
     line-height: 200px;
